<resources>
    <string name="app_name">Home Temp</string>
    <string name="action_settings">Settings</string>
    <string name="yesbutton"><b>¡Si!</b></string>
    <string name="calortext"><b>¡Hace mucho calor!... ¿Quieres prender el ventilador?</b></string>
    <string name="friotext"><b>¡Hace mucho frio!... ¿Quieres prender la calefaccion?</b></string>
    <string name="temp"><b>Temperatura:     </b></string>
    <string name="hum"><b>Humedad:    </b></string>
</resources>
