<?xml version="1.0" encoding="utf-8"?>

<!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.mcuhq.simplebluetooth.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/im_home"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textTitle"
                    android:text="@string/app_name"
                    android:textSize="45sp"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="center"/>
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout> -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mcuhq.simplebluetooth.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--<ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/im_home"/> -->

        <LinearLayout
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:id="@+id/textTemp"
                android:textSize="30sp"
                />

            <TextView
                android:id="@+id/sensetemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
            <TextView
                android:id="@+id/sensedeveristemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hum"
                android:id="@+id/textHum"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/sensehum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text=""/>
            <TextView
                android:id="@+id/sensedeverishum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actuadorcalor"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/calortext"
                android:id="@+id/textCalor"
                android:textSize="25sp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yesbutton"
                android:id="@+id/textButton"
                android:textSize="20sp"
                android:clickable="true"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/actuadorfrio"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/friotext"
                android:id="@+id/textFrio"
                android:textSize="25sp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yesbutton"
                android:id="@+id/textButton2"
                android:textSize="20sp"
                android:clickable="true"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

      <!--  <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Toggle LED"
            android:id="@+id/checkboxLED1"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:layout_alignLeft="@+id/bluetoothStatus"
            android:layout_alignStart="@+id/bluetoothStatus"
            android:scaleX="1.7"
            android:scaleY="1.7"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" /> -->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="RX:"
                android:ellipsize="end"
                android:maxLines="1"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="&lt;Read Buffer>"
                android:id="@+id/readBuffer"
                android:layout_centerHorizontal="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="Status:"
                android:ellipsize="end"
                android:maxLines="1"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"

                android:text="&lt;Bluetooth Status>"
                android:id="@+id/bluetoothStatus"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_centerHorizontal="true"
                android:layout_alignTop="@+id/checkboxLED1" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bluetooth ON"
            android:id="@+id/scan"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/off" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bluetooth OFF"
            android:id="@+id/off"
            android:layout_alignBottom="@+id/scan"
            android:layout_toEndOf="@+id/PairedBtn"
            android:layout_toRightOf="@+id/PairedBtn" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Show paired Devices"
            android:id="@+id/PairedBtn"
            android:layout_below="@+id/scan"
            android:layout_toStartOf="@+id/discover" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Discover New Devices"
            android:id="@+id/discover"
            android:layout_below="@+id/off"
            android:layout_toRightOf="@+id/checkboxLED1"
            android:layout_toEndOf="@+id/checkboxLED1" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/devicesListView"
            android:choiceMode="singleChoice"
            android:layout_below="@+id/PairedBtn"
            android:layout_alignRight="@+id/off"
            android:layout_alignEnd="@+id/off" />

    </LinearLayout>

</RelativeLayout>
    <!--    </android.support.design.widget.CoordinatorLayout>-->
